--- a/reallGood.html
+++ b/reallGood.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Push</title>
 </head>
 <body>
-    <h1>Faux Title</h1>
-    <p>In addition to our fake placeholder title above, this paragraph is similarly here to do nothing but literally just take up space</p>
+    <h1 class="heading">Naomi and Diren</h1>
+    <p>Two households, both alike in dignity
+        (In fair Verona, where we lay our scene),
+        From ancient grudge break to new mutiny,
+        Where civil blood makes civil hands unclean.
+        From forth the fatal loins of these two foes
+        A pair of star-crossed lovers take their life;
+        Whose misadventured piteous overthrows
+        Doth with their death bury their parents’ strife.
+        The fearful passage of their death-marked love
+        And the continuance of their parents’ rage,
+        Which, but their children’s end, naught could remove,
+        Is now the two hours’ traffic of our stage;.</p>
 </body>
 </html>
