--- a/reallGood.html
+++ b/reallGood.html
@@ -21,6 +21,8 @@
         And the continuance of their parents’ rage,
         Which, but their children’s end, naught could remove,
         Is now the two hours’ traffic of our stage;.</p>
-    <img src="https://s2.r29static.com/bin/entry/8df/430x516,85/1683072/image.webp" class="picture-border"/>
+    <div 
+    id="Library">
+    </div>    
 </body>
 </html>
